@@ -36,10 +36,10 @@
 		<table class="budget part_org sortable">
 			<thead>
 				<tr>
-					<th data-sort="string">PARTICIPATING ORG</th>
-					<th data-sort="string">REF</th>
-					<th data-sort="int">ROLE</th>
-					<th data-sort="int">TYPE</th>
+					<th data-sort="string" data-sort-multicolumn="0,1,2,3">PARTICIPATING ORG</th>
+					<th data-sort="string" data-sort-multicolumn="0,1,2,3">REF</th>
+					<th data-sort="int" data-sort-multicolumn="0,1,2,3">ROLE</th>
+					<th data-sort="int" data-sort-multicolumn="0,1,2,3">TYPE</th>
 				</tr>
 			</thead>
 			{_it./participating-org:/participating-org}
