@@ -6,6 +6,7 @@ Add test savi xml for json conversion
 Add codelist mapping to dflat
 Add title hover text with description
 Change sortable to string
+Add multicolumn sorting
 
 
 Development Portal (2019-10-27 shi)
